hw1-2 complete